refactor(experiments): clean up exp001/exp002 notebooks and add filtered/original variants

--- a/experiments/preprocess.ipynb
+++ b/experiments/preprocess.ipynb
@@ -815,21 +815,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e91ef53c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "df = pd.read_csv(\"../data/processed/bdm-corpus-2/stage-5/data.csv\")\n",
     "\n",
     "# Original\n",
-    "train_original = df.iloc[:-200]\n",
-    "test_original = df.tail(200)\n",
+    "train_original = df.iloc[:-500]\n",
+    "test_original = df.tail(500)\n",
     "\n",
     "# Filtered (remove stable first, for equal sets)\n",
     "df_filtered = df[df['Direction'] != 'Stable']\n",
-    "train_filtered = df_filtered.iloc[:-200]\n",
-    "test_filtered = df_filtered.tail(200)\n",
+    "train_filtered = df_filtered.iloc[:-500]\n",
+    "test_filtered = df_filtered.tail(500)\n",
     "\n",
     "# Save\n",
     "train_original.to_csv(\"../data/processed/bdm-corpus-2/stage-5/train_original.csv\", index=False)\n",
@@ -840,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "3572add0",
    "metadata": {},
    "outputs": [
@@ -851,28 +852,28 @@
       "\n",
       "Train (Original)\n",
       "Direction\n",
-      "Increase    1234\n",
-      "Decrease    1149\n",
-      "Stable       735\n",
+      "Increase    1096\n",
+      "Decrease    1046\n",
+      "Stable       676\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Test (Original)\n",
       "Direction\n",
-      "Increase    76\n",
-      "Stable      72\n",
-      "Decrease    52\n",
+      "Increase    214\n",
+      "Decrease    155\n",
+      "Stable      131\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Train (Filtered)\n",
       "Direction\n",
-      "Increase    1189\n",
-      "Decrease    1122\n",
+      "Increase    1045\n",
+      "Decrease     966\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Test (Filtered)\n",
       "Direction\n",
-      "Increase    121\n",
-      "Decrease     79\n",
+      "Increase    265\n",
+      "Decrease    235\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -898,7 +899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_temp",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
