--- a/experiments/exp001/exp001_filtered.ipynb
+++ b/experiments/exp001/exp001_filtered.ipynb
@@ -60,35 +60,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Previsão\n",
-      "-1    219\n",
-      " 1    181\n",
+      "Prediction\n",
+      "-1    310\n",
+      " 1    190\n",
       "Name: count, dtype: int64 \n",
-      "Total values: 400\n"
+      "Total values: 500\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"../../results/exp001/results.csv\")\n",
-    "preds = df['Previsão']\n",
+    "preds = df['Prediction']\n",
     "print(preds.value_counts(), '\\n' 'Total values: 'f'{preds.value_counts().sum()}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6eeec4ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping = {1: 'Aumento', -1: 'Diminuição'}\n",
-    "df['Previsão'] = df['Previsão'].map(mapping)"
+    "mapping = {1: 'Decrease', -1: 'Increase', 0: 'Stable'}\n",
+    "df['Prediction'] = df['Prediction'].map(mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e4e5f66d",
    "metadata": {},
    "outputs": [
@@ -96,24 +96,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 98 129]\n",
-      " [ 83  90]]\n"
+      "\n",
+      "Confusion Matrix:\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted Increase</th>\n",
+       "      <th>Predicted Decrease</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual Increase</th>\n",
+       "      <td>161</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual Decrease</th>\n",
+       "      <td>149</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Predicted Increase  Predicted Decrease\n",
+       "Actual Increase                 161                 104\n",
+       "Actual Decrease                 149                  86"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "'''\n",
-    "[[TP FN]\n",
-    " [FP TN]]\n",
-    "'''\n",
-    "cm = confusion_matrix(df[\"Direção\"], df[\"Previsão\"], labels=[\"Aumento\", \"Diminuição\"])\n",
-    "print(cm)"
+    "import pandas as pd\n",
+    "\n",
+    "labels = [\"Increase\", \"Decrease\"]\n",
+    "\n",
+    "cm = confusion_matrix(df[\"Direction\"], df[\"Prediction\"], labels=labels)\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm,\n",
+    "    index=[f\"Actual {label}\" for label in labels],\n",
+    "    columns=[f\"Predicted {label}\" for label in labels]\n",
+    ")\n",
+    "\n",
+    "print(\"\\nConfusion Matrix:\\n\")\n",
+    "display(cm_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "20ce7e87",
    "metadata": {},
    "outputs": [
@@ -126,12 +183,12 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Aumento      0.541     0.432     0.480       227\n",
-      "  Diminuição      0.411     0.520     0.459       173\n",
+      "    Increase      0.519     0.608     0.560       265\n",
+      "    Decrease      0.453     0.366     0.405       235\n",
       "\n",
-      "    accuracy                          0.470       400\n",
-      "   macro avg      0.476     0.476     0.470       400\n",
-      "weighted avg      0.485     0.470     0.471       400\n",
+      "    accuracy                          0.494       500\n",
+      "   macro avg      0.486     0.487     0.482       500\n",
+      "weighted avg      0.488     0.494     0.487       500\n",
       "\n"
      ]
     }
@@ -140,14 +197,14 @@
     "from sklearn.metrics import classification_report\n",
     "\n",
     "# Normalize predictions (just in case)\n",
-    "df[\"Previsão\"] = df[\"Previsão\"].str.strip().str.capitalize()\n",
-    "df[\"Direção\"] = df[\"Direção\"].str.strip().str.capitalize()\n",
+    "df[\"Prediction\"] = df[\"Prediction\"].str.strip().str.capitalize()\n",
+    "df[\"Direction\"] = df[\"Direction\"].str.strip().str.capitalize()\n",
     "\n",
     "# Report\n",
     "report = classification_report(\n",
-    "    df[\"Direção\"], df[\"Previsão\"],\n",
-    "    labels=[\"Aumento\", \"Diminuição\"],\n",
-    "    target_names=[\"Aumento\", \"Diminuição\"],\n",
+    "    df[\"Direction\"], df[\"Prediction\"],\n",
+    "    labels=[\"Increase\", \"Decrease\"],\n",
+    "    target_names=[\"Increase\", \"Decrease\"],\n",
     "    digits=3\n",
     ")\n",
     "\n",
@@ -158,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_temp",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
