chore(experiments): clean up old notebooks and prompts, update experiment notebooks

--- a/experiments/exp003/exp003.ipynb
+++ b/experiments/exp003/exp003.ipynb
@@ -5,60 +5,9 @@
    "id": "0a4ab881",
    "metadata": {},
    "source": [
-    "### exp004 - fine-tuning LLaMA3.1 8b instruct w/ LoRA (PEFT) via ~3057 labeled headlines\n",
+    "# exp003\n",
+    "Fine-tuning LLaMA3.1 8b instruct w/ LoRA (PEFT) via ~3057 labeled headlines\n",
     "https://colab.research.google.com/drive/1m5--orgqdnCUtSKUGH4WR1CZ_UB7FkPP?usp=sharing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "486eed1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv(\"../../results/exp004/results.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c4f3b4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "'''\n",
-    "[[TP FN]\n",
-    " [FP TN]]\n",
-    "'''\n",
-    "cm = confusion_matrix(df[\"Direção\"], df[\"Prediction\"], labels=[\"Aumento\", \"Diminuição\"])\n",
-    "print(cm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ee5dcca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "# Normalize predictions (just in case)\n",
-    "df[\"Prediction\"] = df[\"Prediction\"].str.strip().str.capitalize()\n",
-    "df[\"Direção\"] = df[\"Direção\"].str.strip().str.capitalize()\n",
-    "\n",
-    "# Report\n",
-    "report = classification_report(\n",
-    "    df[\"Direção\"], df[\"Prediction\"],\n",
-    "    labels=[\"Aumento\", \"Diminuição\"],\n",
-    "    target_names=[\"Aumento\", \"Diminuição\"],\n",
-    "    digits=3\n",
-    ")\n",
-    "\n",
-    "print(\"\\nClassification Report:\\n\")\n",
-    "print(report)"
    ]
   }
  ],
